; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/qib/extr_qib_qp.c_qib_qp_priv_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/qib/extr_qib_qp.c_qib_qp_priv_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rvt_dev_info = type { i32 }
%struct.rvt_qp = type { %struct.qib_qp_priv* }
%struct.qib_qp_priv = type { %struct.qib_qp_priv* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qib_qp_priv_free(%struct.rvt_dev_info* %0, %struct.rvt_qp* %1) #0 {
  %3 = alloca %struct.rvt_dev_info*, align 8
  %4 = alloca %struct.rvt_qp*, align 8
  %5 = alloca %struct.qib_qp_priv*, align 8
  store %struct.rvt_dev_info* %0, %struct.rvt_dev_info** %3, align 8
  store %struct.rvt_qp* %1, %struct.rvt_qp** %4, align 8
  %6 = load %struct.rvt_qp*, %struct.rvt_qp** %4, align 8
  %7 = getelementptr inbounds %struct.rvt_qp, %struct.rvt_qp* %6, i32 0, i32 0
  %8 = load %struct.qib_qp_priv*, %struct.qib_qp_priv** %7, align 8
  store %struct.qib_qp_priv* %8, %struct.qib_qp_priv** %5, align 8
  %9 = load %struct.qib_qp_priv*, %struct.qib_qp_priv** %5, align 8
  %10 = getelementptr inbounds %struct.qib_qp_priv, %struct.qib_qp_priv* %9, i32 0, i32 0
  %11 = load %struct.qib_qp_priv*, %struct.qib_qp_priv** %10, align 8
  %12 = call i32 @kfree(%struct.qib_qp_priv* %11)
  %13 = load %struct.qib_qp_priv*, %struct.qib_qp_priv** %5, align 8
  %14 = call i32 @kfree(%struct.qib_qp_priv* %13)
  ret void
}

declare dso_local i32 @kfree(%struct.qib_qp_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
